@@ -22,10 +22,6 @@
 
 package io.crate.analyze;
 
-import com.google.common.collect.HashMultimap;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Multimap;
 import io.crate.expression.operator.AndOperator;
 import io.crate.expression.operator.EqOperator;
 import io.crate.expression.operator.GtOperator;
@@ -53,18 +49,19 @@ import io.crate.metadata.SearchPath;
 import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 public final class GeneratedColumnExpander {
 
-    private static final Map<String, String> ROUNDING_FUNCTION_MAPPING = ImmutableMap.of(
+    private static final Map<String, String> ROUNDING_FUNCTION_MAPPING = Map.of(
         GtOperator.NAME, GteOperator.NAME,
         LtOperator.NAME, LteOperator.NAME
     );
 
-    private static final Set<String> ROUNDING_FUNCTIONS = ImmutableSet.of(
+    private static final Set<String> ROUNDING_FUNCTIONS = Set.of(
         CeilFunction.CEIL,
         FloorFunction.NAME,
         RoundFunction.NAME,
@@ -99,10 +96,10 @@ public final class GeneratedColumnExpander {
     private static class ComparisonReplaceVisitor extends FunctionCopyVisitor<ComparisonReplaceVisitor.Context> {
 
         static class Context {
-            private final Multimap<Reference, GeneratedReference> referencedRefsToGeneratedColumn;
+            private final HashMap<Reference, ArrayList<GeneratedReference>> referencedRefsToGeneratedColumn;
             private final Functions functions;
 
-            public Context(Multimap<Reference, GeneratedReference> referencedRefsToGeneratedColumn,
+            public Context(HashMap<Reference, ArrayList<GeneratedReference>> referencedRefsToGeneratedColumn,
                            Functions functions) {
                 this.referencedRefsToGeneratedColumn = referencedRefsToGeneratedColumn;
                 this.functions = functions;
@@ -117,7 +114,7 @@ public final class GeneratedColumnExpander {
                               List<GeneratedReference> generatedCols,
                               List<Reference> expansionCandidates,
                               Functions functions) {
-            Multimap<Reference, GeneratedReference> referencedSingleReferences =
+            HashMap<Reference, ArrayList<GeneratedReference>> referencedSingleReferences =
                 extractGeneratedReferences(generatedCols, expansionCandidates);
             if (referencedSingleReferences.isEmpty()) {
                 return symbol;
@@ -152,7 +149,8 @@ public final class GeneratedColumnExpander {
 
 
         private Symbol addComparison(Function function, Reference reference, Symbol comparedAgainst, Context context) {
-            Collection<GeneratedReference> genColInfos = context.referencedRefsToGeneratedColumn.get(reference);
+            ArrayList<GeneratedReference> genColInfos = context.referencedRefsToGeneratedColumn
+                .computeIfAbsent(reference, (k) -> new ArrayList<>());
             List<Function> comparisonsToAdd = new ArrayList<>(genColInfos.size());
             comparisonsToAdd.add(function);
             for (GeneratedReference genColInfo : genColInfos) {
@@ -220,15 +218,19 @@ public final class GeneratedColumnExpander {
             );
         }
 
-        private static Multimap<Reference, GeneratedReference> extractGeneratedReferences(List<GeneratedReference> generatedCols,
-                                                                                          Collection<Reference> partitionCols) {
-            Multimap<Reference, GeneratedReference> multiMap = HashMultimap.create();
+        private static HashMap<Reference, ArrayList<GeneratedReference>> extractGeneratedReferences(
+            List<GeneratedReference> generatedCols,
+            Collection<Reference> partitionCols) {
+            HashMap<Reference, ArrayList<GeneratedReference>> map = new HashMap<>();
             for (GeneratedReference generatedColumn : generatedCols) {
                 if (generatedColumn.referencedReferences().size() == 1 && partitionCols.contains(generatedColumn)) {
-                    multiMap.put(generatedColumn.referencedReferences().get(0), generatedColumn);
+                    map
+                        .computeIfAbsent(generatedColumn.referencedReferences().get(0), v -> new ArrayList<>())
+                        .add(generatedColumn);
+
                 }
             }
-            return multiMap;
+            return map;
         }
     }
 
