@@ -27,7 +27,6 @@ import com.amazonaws.services.s3.model.ObjectListing;
 import com.amazonaws.services.s3.model.S3Object;
 import com.amazonaws.services.s3.model.S3ObjectInputStream;
 import com.amazonaws.services.s3.model.S3ObjectSummary;
-import com.google.common.collect.ImmutableMap;
 import io.crate.data.BatchIterator;
 import io.crate.data.Bucket;
 import io.crate.data.Input;
@@ -65,7 +64,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
@@ -290,7 +288,7 @@ public class FileReadingCollectorTest extends CrateUnitTest {
             inputs,
             ctx.expressions(),
             compression,
-            ImmutableMap.of(
+            Map.of(
                 LocalFsFileInputFactory.NAME, new LocalFsFileInputFactory(),
                 S3FileInputFactory.NAME, () -> new S3FileInput(new S3ClientHelper() {
                     @Override
@@ -302,7 +300,7 @@ public class FileReadingCollectorTest extends CrateUnitTest {
 
 
                         when(client.listObjects(anyString(), anyString())).thenReturn(objectListing);
-                        when(objectListing.getObjectSummaries()).thenReturn(Arrays.asList(summary));
+                        when(objectListing.getObjectSummaries()).thenReturn(Collections.singletonList(summary));
                         when(summary.getKey()).thenReturn("foo");
                         when(client.getObject("fakebucket", "foo")).thenReturn(s3Object);
                         when(s3Object.getObjectContent()).thenReturn(s3InputStream);
